# archrypto-public

./: .gitignore  Cargo.toml  README.md
crates/archrypt/: Cargo.toml
crates/archrypt/src/: config.json.template  config.rs  main.rs
crates/archrypto_core/: Cargo.toml
crates/archrypto_core/src/: lib.rs
