[package]
name = "acrp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.17"
archrypto_core = {path = "../archrypto_core"}
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
dirs = "6.0.0"
anyhow = {workspace = true}
