[package]
name = "archrypto_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "2.2.2"
rsa = "0.9.7" 
rand= "0.9.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
anyhow = {workspace = true}
walkdir = "2.5.0"
indicatif = "0.17.11"
tempfile = "3.17.1"
